--- a/modulo_2/exercicios/ex017/fonte01.html
+++ b/modulo_2/exercicios/ex017/fonte01.html
@@ -44,6 +44,6 @@
     <h1>Trabalhando com fontes</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo sit odit quas, maiores maxime labore consectetur, at distinctio recusandae vitae itaque quos laudantium quam ipsam earum totam porro tempore provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ullam provident exercitationem velit, dolore accusamus eos? Dolorem esse itaque eius, dolore dolor quidem voluptatibus eveniet eaque consectetur laudantium eum excepturi?</p>
     <h2>Subtítulo do Exercício</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat nihil vitae minima adipisci, veritatis odio nobis? Veritatis odit aspernatur dolores quisquam eaque velit officia molestiae adipisci laboriosam. Non, suscipit ipsam.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat nihil vitae minima adipisci, veritatis odio nobis? Veritatis odit aspernatur dolores quisquam eaque velit officia molestiae adipisci laboriosam. Non, suscipit ipsamdfghdfgh.</p>
 </body>
 </html>
