--- a/modulo_4/exercicios/ex024/iframe001.html
+++ b/modulo_4/exercicios/ex024/iframe001.html
@@ -17,9 +17,9 @@
     <h1>Testando o uso de um iframe</h1>
     <p>Tamanho padrão 350x150</p>
     <p>
-        Acessadndo o site do 
+        Acessando o site do 
         
-        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling=" auto"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
         <a href="https://www.cursoemvideo.com">Curso em Video</a>
 
         para aprender a programar
